Added click count

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <div id="instructions">
         Apasa click oriunde pe pagina pentru a crea un cerc
     </div>
+    <div class="click-info" unselectable="on">
+        <h2 id="clickCount">0</h2>
+        <h4>Cercuri Create</h4>
+        X: <span id="clickX"></span>
+        Y: <span id="clickY"></span>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
